--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.16",
     "framer-motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,7 +30,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
     "rollup": "^4.34.6",
-    "tailwindcss": "^4.0.6",
-    "vite": "^6.1.0"
+    "tailwindcss": "^4.0.16",
+    "vite": "^6.2.1"
   }
 }
