--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.16",
+    "axios": "^1.10.0",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.522.0",
     "react": "^19.0.0",
