--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.10.0",
     "framer-motion": "^12.4.2",
+    "joi": "^18.0.1",
     "lucide-react": "^0.522.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
